Fix colour contrast for disqus and dark theme.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -179,5 +179,5 @@ body {
 
 // Disqus colour fix for dark mode ==============================================
 .post-message {
-    color: white
+    color: #eaeaea;
 }
